2009-06-09  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-date-selector.c:
	(hildon_date_selector_construct_ui):
	* hildon/hildon-time-selector.c:
	(hildon_time_selector_constructor):
	* hildon/hildon-touch-selector-entry.c:
	(hildon_touch_selector_entry_set_text_column),
	(hildon_touch_selector_entry_get_text_column):
	* hildon/hildon-touch-selector.c: (_default_print_func),
	(hildon_touch_selector_new_text): Use
	hildon_touch_selector_set/get_text_column() instead of
	setting/getting the "text-column" property.

2009-06-09  Claudio Saavedra  <csaavedra@igalia.com>

	* doc/hildon-sections.txt: Add the new public methods below.

	* examples/hildon-picker-button-multicolumn-example.c:
	(create_touch_selector):
	* examples/hildon-touch-selector-example.c: (create_selector):
	* examples/hildon-touch-selector-multi-cells-example.c:
	(create_selector):
	Use hildon_touch_selector_column_set_text_column()

	* hildon/hildon-touch-selector-column.h:
	* hildon/hildon-touch-selector.c:
	(hildon_touch_selector_column_set_text_column),
	(hildon_touch_selector_column_get_text_column):
	Make hildon_touch_selector_column_set/get_column() public, use
	them in the inline example, document them, and reference to them
	in the docs.

2009-06-09  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-time-selector.c: Fix the docs for
	hildon_time_selector_new_step().

2009-06-09  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-touch-selector.c: Improve the documentation for
	hildon_touch_selector_append_column().

	Fixes MB#4641 (Documentation:
	hildon_touch_selector_append_column() ref-counting)

2009-06-08  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/check-hildon-controlbar.c: (test_set_range_invalid):
	Comment out test 5, since the hildon_controlbar_set_range() range
	check is broken and fixing it would have side effects. Also,
	this finally fixes make distcheck.

	Fixes: NB#101420 (Update unit tests and fix make distcheck)
